--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/app",
     "generate-docs": "node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "author": "CamiloTD",
@@ -12,11 +12,11 @@
   "dependencies": {
     "coraline-core": "1.0.1",
     "express": "^4.16.3",
-    "jsdoc": "^3.5.5",
     "opn": "^5.3.0",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "docdash": "^0.4.0"
+    "tidy-jsdoc": "^0.2.1",
+    "jsdoc": "^3.5.5",
   }
 }
