--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test/app",
+    "test": "node test",
     "generate-docs": "node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "author": "CamiloTD",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "coraline-core": "1.0.1",
+    "coraline-core": "1.0.4",
     "express": "^4.16.3",
     "opn": "^5.3.0",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "tidy-jsdoc": "^0.2.1",
-    "jsdoc": "^3.5.5",
+    "@pixi/jsdoc-template": "^2.4.2",
+    "jsdoc": "^3.5.5"
   }
 }
